--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
+  },
+  "devDependencies": {
+    "ts-proto": "^1.139.0",
+    "ts-protoc-gen": "^0.15.0"
   }
 }
