--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "typescript": "4.9.5"
   },
   "devDependencies": {
-    "ts-proto": "^1.139.0",
-    "ts-protoc-gen": "^0.15.0"
+    "ts-proto": "^1.139.0"
   }
 }
